Fixed spacing issue on mobile layouts!

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -17,3 +17,10 @@
     height: 180px;
     padding-right: 15px;
 }
+
+@media only screen and (max-width: 1030px) {
+    #home-grid {
+        grid-template-columns: none;
+        grid-row-gap: 0;
+    }
+}
